# Sonicmatch

./: .gitignore
.claude/: settings.local.json
backend/: .env.example  .gitignore  INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/db/: base.py
backend/app/models/: __init__.py  audio_profile.py  headphone.py  preference.py  user.py
backend/app/prompts/: recommendation_prompts.py
backend/app/schemas/: __init__.py  common.py  headphone.py  recommendation.py
backend/app/services/: llm_service.py  recommendation_engine.py
backend/docker/: .dockerignore  nginx.conf
backend/examples/: quick_test.py
backend/migrations/: env.py
backend/seeds/: headphones.json
backend/tests/: evaluate_system.py  fixtures.py  test_api.py  test_audio_profile.py  test_recommendation_engine.py
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/browse/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/find-my-sound/: page.tsx
frontend/lib/: csvParser.ts  headphoneImages.ts  matchingAlgorithm.ts
frontend/scripts/: generate_image_urls.py
frontend/stores/: index.ts  listeningTestStore.ts
frontend/styles/: globals.css
frontend/types/: data.ts
sonicmatch-backend/: Dockerfile  alembic.ini  requirements.txt
sonicmatch-backend/app/: config.py  main.py
sonicmatch-backend/seeds/: seed_db.py
sonicmatch-frontend/sonicmatch-frontend/: tailwind.config.ts
(+67 files in other folders)
